<resources>
    <string name="app_name">Smart Home</string>

    <string-array name="options_array">
        <item>Update</item>
        <item>Delete</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_home">Welcome to your Smart Home</string>
    <string name="more">More</string>
    <string name="add">Add</string>
    <string name="change_name">Change Name</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="update_details">Update Details</string>
    <string name="changename">Change Name</string>
    <string name="delete">Delete</string>
    <string name="add_new_room">Add new Room</string>
    <string name="welcome_to_smart_home">Welcome to Smart Home</string>
    <string name="default_info">Default Info</string>
    <string name="start_searching">Start Searching</string>
    <string name="room">Room</string>
    <string name="start">Start</string>
    <string name="select_room">Select Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="pooja_room">Pooja Room</string>
    <string name="bed_room">Bed Room</string>
    <string name="store_room">Store Room</string>
    <string name="hall">Hall</string>
    <string name="study_room">Study Room</string>
    <string name="room_name">Room Name</string>
    <string name="room1">Room1</string>
    <string name="update">Update</string>
    <string name="enter_new_value">Enter new value</string>


</resources>