<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.bthome.viewModels.DataBaseUpdateViewModel" />
    </data>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DataBaseUpdateFragment">
    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/monotype_plantin_mt_pro_regular"
        android:gravity="center_vertical"
        android:lineHeight="40dp"
        android:lineSpacingExtra="4sp"
        android:maxLines="3"
        android:minLines="1"
        android:paddingStart="55dp"
        android:paddingTop="@dimen/_55dp"
        android:paddingBottom="@dimen/_15dp"
        android:singleLine="false"
        android:text="@string/update_details"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">


        <TextView
            android:id="@+id/room_number_id"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:background="@color/white"
            android:paddingLeft="@dimen/_45dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="@string/changename"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/_17dp"
            android:paddingTop="@dimen/_17dp"
            android:paddingBottom="@dimen/_17dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_img">


        <TextView
            android:id="@+id/delete"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:background="@color/white"
            android:paddingLeft="@dimen/_45dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="@string/delete"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/_17dp"
            android:paddingTop="@dimen/_17dp"
            android:paddingBottom="@dimen/_17dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bg">
        <TextView
            android:id="@+id/img_name"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:background="@color/white"
            android:paddingLeft="@dimen/_45dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="Change Icon"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/_17dp"
            android:paddingTop="@dimen/_17dp"
            android:paddingBottom="@dimen/_17dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</layout>

