<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.bthome.viewModels.MoreViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/light_water_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreFragment">
    <LinearLayout
        android:id="@+id/bg_layout"
        android:background="@color/back_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

<!--    <ImageView-->
<!--        android:id="@+id/imageButton"-->
<!--        android:layout_width="43dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="47dp"-->
<!--        android:background="@drawable/back"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/back_color"
        android:fontFamily="@font/segoeui"
        android:gravity="center_vertical"
        android:lineHeight="40dp"
        android:layout_marginStart="23dp"
        android:lineSpacingExtra="4sp"
        android:maxLines="3"
        android:minLines="1"
        android:paddingStart="25dp"
        android:paddingTop="@dimen/_55dp"
        android:paddingBottom="@dimen/_15dp"
        android:singleLine="false"
        android:text="@string/more"
        android:textColor="@color/light_water_"
        android:textSize="30sp"

        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_layout">


        <TextView
            android:background="@color/light_water_"
            android:id="@+id/room_number_id"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/_45dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="@string/add_new_room"
            android:textSize="20sp" />

        <ImageView
            android:background="@color/light_water_"
            android:id="@+id/imgView"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:paddingEnd="@dimen/_17dp"
            android:paddingTop="@dimen/_17dp"
            android:paddingBottom="@dimen/_17dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <GridView
        android:background="@color/light_water_"
        android:id="@+id/ghost_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bg" />
    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghost_view">


        <TextView
            android:background="@color/light_water_"
            android:id="@+id/logoutid"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/_45dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="Logout"
            android:textSize="20sp" />

        <ImageView
            android:background="@color/light_water_"
            android:id="@+id/logoutimgView"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:paddingEnd="@dimen/_17dp"
            android:paddingTop="@dimen/_17dp"
            android:paddingBottom="@dimen/_17dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/aButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:background="@color/light_water_"
            android:padding="15dp"
            android:src="@drawable/baseline_home_24_gray"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/sButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="15dp"
            android:src="@drawable/baseline_on_device_training_24"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/mButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="15dp"
            android:src="@drawable/baseline_settings_suggest_24"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/atext"
            android:textAlignment="center"
            android:text="Home"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"/>

        <TextView
            android:id="@+id/stext"
            android:text="Room Detail"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"/>

        <TextView
            android:id="@+id/mtext"
            android:text="More"
            android:textAlignment="center"
            android:textColor="@color/back_color"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>