<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.bthome.viewModels.ChangeIconViewModel" />
    </data>
    <ScrollView
        android:background="@color/light_water_"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:background="@color/light_water_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ChangeNameFragment">
        <LinearLayout
            android:id="@+id/bg_layout"
            android:background="@color/back_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="43dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="47dp"
                android:background="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/back_color"
                android:fontFamily="@font/segoeui"
                android:gravity="center_vertical"
                android:lineHeight="40dp"
                android:lineSpacingExtra="4sp"
                android:maxLines="3"
                android:minLines="1"
                android:paddingStart="25dp"
                android:paddingTop="@dimen/_55dp"
                android:paddingBottom="@dimen/_15dp"
                android:singleLine="false"
                android:text="Change Icon"
                android:textColor="@color/light_water_"
                android:textSize="30sp"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customName">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/kitchenlayout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/kitchen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginBottom="1dp"
                        android:paddingBottom="35dp"
                        android:scaleType="center"
                        android:src="@drawable/kitchen" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/poojaLayout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/pooja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:paddingBottom="35dp"

                        android:scaleType="center"
                        android:src="@drawable/poojadiya" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/bedroomlayout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/bedroom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginBottom="@dimen/_1dp"
                        android:paddingBottom="@dimen/_35dp"
                        android:scaleType="center"
                        android:src="@drawable/bedroom" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/studylayout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/study"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginBottom="@dimen/_1dp"
                        android:paddingBottom="@dimen/_20dp"
                        android:scaleType="center"
                        android:src="@drawable/study" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/halllayout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/hall"
                        android:paddingBottom="@dimen/_12dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:scaleType="center"
                        android:src="@drawable/hall" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/storeRoom"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/select_device_unselected_bg"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/store"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:scaleType="center"
                        android:src="@drawable/storeroom" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_15dp"
            android:id="@+id/customName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/bg_layout"
            app:layout_constraintStart_toStartOf="@+id/bg_layout"
            app:layout_constraintTop_toBottomOf="@+id/bg_layout">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/selectImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Image from Gallery" />
            <ImageView

                android:id="@+id/selectedImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_image_search_24" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


            <ImageView
                android:id="@+id/skipButton"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/circle_background_white"
                android:padding="@dimen/_5dp"
                android:src="@drawable/clear"
                android:text="@string/next"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <ImageView
                android:id="@+id/next_button"
                android:layout_marginStart="@dimen/_50dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_background_white"
                android:padding="@dimen/_5dp"
                android:src="@drawable/baseline_next_plan_24"
                android:text="@string/cancel"
                app:layout_constraintStart_toEndOf="@+id/next_button"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:text="@string/skip" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>